# hormuz-sim

./: .gitignore  COMPARATIVE_ANALYSIS.md  Dockerfile  Dockerfile.api  Dockerfile.web  FINDINGS_FEARON_DIA.md  FINDINGS_WITTMAN_ZARTMAN.md  README.md  docker-compose.yml  houthi_run.csv  nginx.conf  nixpacks.toml  package-lock.json  pyproject.toml  railway.json  railway.toml  requirements.txt  run.py  run_fearon_dia.py  vercel.json
api/: config.py  main.py  schemas.py
api/routers/: comparison.py  export.py  monte_carlo.py  parameters.py  scenarios.py  simulation.py  snapshots.py  updates.py
api/services/: analyzer.py  mc_runner.py  scraper.py  sim_manager.py  snapshot_store.py  update_store.py
api/ws/: handlers.py
docs/: take-screenshots.mjs
docs/first run results/: COMPARATIVE_ANALYSIS.md  SCENARIO_DOCUMENT.md  baseline_run.csv  ceasefire_run.csv
src/: __init__.py  agents.py  beliefs.py  escalation.py  monte_carlo.py  oil_market.py  scenario.py  signals.py  simulation.py  termination.py
src_fearon_dia/: __init__.py  covariates.py  dia_hazard.py  duration_termination.py  ensemble.py  fearon.py  monte_carlo_b.py  simulation_b.py
web/: .env.example  package-lock.json  package.json
web/src/: App.tsx  index.css  main.tsx  theme.ts
web/src/api/: client.ts  websocket.ts
web/src/components/: NarrativeFeed.tsx  ReplayControls.tsx  ResetButton.tsx  SensitivityMatrix.tsx  TurnDiff.tsx
web/src/pages/: AgentExplorerPage.tsx  BranchComparisonPage.tsx  DashboardPage.tsx  EscalationTimelinePage.tsx  MonteCarloPage.tsx  OilMarketPage.tsx  ParameterEditorPage.tsx  (+3 more)
(+9 files in other folders)
