[project]
name = "hormuz-sim"
version = "0.1.0"
description = "Strait of Hormuz crisis simulation with war room dashboard"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic-settings>=2.0",
    "websockets>=12.0",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "anthropic>=0.40",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
